<resources>
    <string name="app_name">GitHub User</string>
    <string name="title">Judul</string>
    <string name="description">Description</string>
    <string name="user">username</string>
    <string name="search">Search User</string>
    <string name="search_hint">Input the user</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="follower_text">Follower</string>
    <string name="following_text">Following</string>
    <string name="username">username</string>
    <string name="fullname">full name</string>
    <string name="favorite">Favorite</string>
    <string name="dark_mode">Dark Mode</string>


</resources>